--- a/Ficha03/ex01.html
+++ b/Ficha03/ex01.html
@@ -17,14 +17,6 @@
         </div>
         <span>Olha um segundo span</span>
 
-    <script>
-        //ALINEA B
-        let b = document.getElementById("p2");
-        console.log(b);
-
-        //ALINEA C
-        let c = document.getElementsByTagName("p");
-        console.log(c);
-    </script>
+    <script src="ex01js.js"></script>
 </body>
 </html>
