--- a/Ficha03/ex04.html
+++ b/Ficha03/ex04.html
@@ -6,7 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Ficha03 ex04</title>
 </head>
-<body>
+<body>        
+    <!-- ALINEA A,i)
+    <input value="Click Me" onclick="alert('Olá Mundo')" type="button"></input>
+    -->
+
+    <!--ALINEA A,II)
+    <input id="element" value="Clica-me" type="button"></input>    
+    -->
+
+    <!--ALINEA A, III)-->
+    <button>Clica-me</button>
     <script src="ex04js.js"></script>
 </body>
 </html>
