exercicio 7 feito e tabela melhorada

--- a/Ficha04/ex07.html
+++ b/Ficha04/ex07.html
@@ -57,7 +57,7 @@
 
     <!--janela para exibir o trailer do form-->
     <dialog id="dlgTrailer">
-            <video id="linkTrailer" src="" alt="">
+            <iframe id="linkTrailer" width="640" height="360" allow="autoplay"></iframe>
             <br>
             <button id="btnCloseTrailer">FECHAR</button>
         </dialog>
